fixed overlapping text on hover efect

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,5 +1,5 @@
 .image-hover {
-  @include hover(transform, scale(110%));
+  @include hover(transform, scale(105%));
 }
 
 .actual-events {
